export transform_count_matrix_to_corpus

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(plot_hLDA)
 export(plot_hLDA_betas)
 export(plot_hLDA_gammas)
 export(plot_hLDA_hierarchy)
+export(transform_count_matrix_to_corpus)
 exportClasses(hLDA.model)
 import(dplyr)
 import(ggplot2)
